update project3