@@ -1,51 +1,45 @@
 package edu.project3.args;
 
 import java.io.IOException;
-import java.nio.file.DirectoryStream;
+import java.nio.file.FileSystems;
+import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.PathMatcher;
+import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
-import java.util.regex.Pattern;
 
 public class FilePatternFilter {
 
     private FilePatternFilter() {
     }
 
-    private static DirectoryStream.Filter<Path> regexContains(String pattern) {
-        return (entry -> pattern != null && Pattern.compile(pattern).matcher(entry.toString()).find());
-    }
-
-    private static DirectoryStream<Path> newDirectoryStream(Path path, String regex) throws IOException {
-        return Files.newDirectoryStream(path, regexContains(regex));
-    }
-
-    public static List<Path> getPathsContainsRegex(String path) {
-        int index = path.lastIndexOf("/");
-        Path parentPath;
-        String regex;
+    public static List<Path> getPathsContainsRegex(String localPattern) {
+        List<Path> matchingFiles = new ArrayList<>();
+        int index = localPattern.lastIndexOf("/", localPattern.indexOf('*'));
+        PathMatcher matcher = FileSystems.getDefault().getPathMatcher("glob:" + localPattern);
         if (index == -1) {
-            parentPath = Path.of("");
-            regex = path;
+            return List.of();
+        }
+        Path start;
+        if (index == 0) {
+            start = Paths.get("");
         } else {
-            parentPath = Path.of(path.substring(0, index));
-            regex = "*" + path.substring(index);
+            start = Paths.get(localPattern.substring(0, index));
         }
-        if (Files.isDirectory(parentPath)) {
-            try (DirectoryStream<Path> newDirectoryStream = newDirectoryStream(parentPath, regex)) {
-                Iterator<Path> pathIterator = newDirectoryStream.iterator();
-                List<Path> paths = new ArrayList<>();
-                while (pathIterator.hasNext()) {
-                    paths.add(pathIterator.next());
-                }
-                return paths;
-            } catch (IOException e) {
-                throw new IllegalArgumentException(
-                    "Неверный формат пути к log файлу. Ожидается локальный шаблон или URL.");
-            }
+        try {
+            Files.walk(start, FileVisitOption.FOLLOW_LINKS)
+                .filter(Files::isRegularFile)
+                .filter(matcher::matches)
+                .forEach(matchingFiles::add);
+        } catch (IOException e) {
+            throw new IllegalArgumentException(
+                "Неверный формат пути к log файлу. Ожидается локальный шаблон или URL.",
+                e
+            );
         }
-        return List.of();
+
+        return matchingFiles;
     }
 }
